[package]
name = "silk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
axum = { version = "0.7.5", features = ["macros", "tokio"] }
sqlx = { version = "0.8.2", features = [
    "sqlite",
    "macros",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
time = { version = "0.3.36", features = ["serde", "parsing"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
reqwest = "0.12.7"
