[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["async-read-body", "cookie", "cookie-private", "cookie-signed", "form", "query", "tracing", "typed-routing", "typed-header"] }
reqwest = "0.12.7"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
